# hamburger

./: Cargo.toml
src/: main.rs
src/chat/: mod.rs  session.rs  session_manager.rs
src/llm/: client.rs  config.rs  message.rs  mod.rs
src/ui/: app.rs  mod.rs  state.rs
src/ui/components/: chat.rs  mod.rs  settings.rs  sidebar.rs
