[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.26.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.29.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
